update to new version of pyTEMlib

--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2022\n",
+    "by Gerd Duscher, Spring 2023\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "if test_package('pyTEMlib') < '0.2022.1.1':\n",
+    "if test_package('pyTEMlib') < '0.2023.1.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "\n",
@@ -82,19 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pylab notebook\n",
+    "%matplotlib notebook\n",
+    "import matplotlib.pylab as plt\n",
+    "import numpy as np\n",
     "\n",
     "import scipy.constants as const  #scientific constants"
    ]
@@ -165,16 +159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6256118921262814\n",
-      "Classic wave length is 38.78 pm for acceleration voltage 100.0 kV\n",
-      " which is a velocity of 187553726.89 m/s or 62.56% of the speed of light\n"
+      "0.6256118898444742\n",
+      "Classic wave length is 3.88 pm for acceleration voltage 100.0 kV\n",
+      " which is a velocity of 187553726.21 m/s or 62.56% of the speed of light\n"
      ]
     }
    ],
@@ -194,7 +188,7 @@
     "\n",
     "print(np.sqrt(2/const.m_e*E_kin)/const.c)\n",
     "\n",
-    "print(f'Classic wave length is {wave_length_nm*1000.:.2f} pm for acceleration voltage {acceleration_voltage_V/1000.:.1f} kV')\n",
+    "print(f'Classic wave length is {wave_length_A*100.:.2f} pm for acceleration voltage {acceleration_voltage_V/1000.:.1f} kV')\n",
     "# Notice that we change units in the output to make them most readable.\n",
     "\n",
     "print(f' which is a velocity of {np.sqrt(2/const.m_e*E_kin):.2f} m/s or {np.sqrt(2/const.m_e*E_kin)/const.c*100:.2f}% of the speed of light')"
@@ -217,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -275,15 +269,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The classic velocity of the electron  is 265241024.25 m/s or 88.47% of the speed of light\n",
-      "The relativistic velocity of the electron  is 208450034.88 m/s or 69.53% of the speed of light\n"
+      "The classic velocity of the electron  is 265241023.28 m/s or 88.47% of the speed of light\n",
+      "The relativistic velocity of the electron  is 208450034.42 m/s or 69.53% of the speed of light\n"
      ]
     }
    ],
@@ -303,13 +297,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Symmetry functions of spglib enabled\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "The relativistically corrected wave length is 6.98 pm for acceleration voltage 30.0 kV\n"
      ]
     }
@@ -341,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -350,12 +346,12 @@
      "text": [
       "Help on function get_wavelength in module pyTEMlib.kinematic_scattering:\n",
       "\n",
-      "get_wavelength(e0)\n",
+      "get_wavelength(acceleration_voltage)\n",
       "    Calculates the relativistic corrected de Broglie wavelength of an electron in Angstrom\n",
       "    \n",
       "    Parameter:\n",
       "    ---------\n",
-      "    e0: float\n",
+      "    acceleration_voltage: float\n",
       "        acceleration voltage in volt\n",
       "    Returns:\n",
       "    -------\n",
@@ -371,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -452,10 +448,12 @@
       "            atomic scattering vector\n",
       "    \n",
       "    find_angles(zone)\n",
-      "        Microscope stage cooordinates of zone\n",
+      "        Microscope stage coordinates of zone\n",
       "    \n",
       "    find_nearest_zone_axis(tags)\n",
       "        Test all zone axis up to a maximum of hkl_max\n",
+      "    \n",
+      "    get_dynamically_allowed(atoms, verbose=False)\n",
       "    \n",
       "    get_metric_tensor(matrix)\n",
       "        The metric tensor of the lattice.\n",
@@ -463,12 +461,12 @@
       "    get_rotation_matrix(tags)\n",
       "        zone axis in global coordinate system\n",
       "    \n",
-      "    get_wavelength(e0)\n",
+      "    get_wavelength(acceleration_voltage)\n",
       "        Calculates the relativistic corrected de Broglie wavelength of an electron in Angstrom\n",
       "        \n",
       "        Parameter:\n",
       "        ---------\n",
-      "        e0: float\n",
+      "        acceleration_voltage: float\n",
       "            acceleration voltage in volt\n",
       "        Returns:\n",
       "        -------\n",
@@ -494,6 +492,40 @@
       "        \n",
       "        Returns\n",
       "        -------\n",
+      "        atoms:\n",
+      "            There are three sub_dictionaries in info attribute:\n",
+      "            ['allowed'], ['forbidden'], and ['HOLZ']\n",
+      "            ['allowed'] and ['forbidden'] dictionaries contain:\n",
+      "                ['Sg'], ['hkl'], ['g'], ['structure factor'], ['intensities'],\n",
+      "                ['ZOLZ'], ['FOLZ'], ['SOLZ'], ['HOLZ'], ['HHOLZ'], ['label'], and ['Laue_zone']\n",
+      "            the ['HOLZ'] dictionary contains:\n",
+      "                ['slope'], ['distance'], ['theta'], ['g_deficient'], ['g_excess'], ['hkl'], ['intensities'],\n",
+      "                ['ZOLZ'], ['FOLZ'], ['SOLZ'], ['HOLZ'], and  ['HHOLZ']\n",
+      "            Please note that the Kikuchi lines are the HOLZ lines of ZOLZ\n",
+      "        \n",
+      "            There are also a few parameters stored in the main dictionary:\n",
+      "                ['wave_length_nm'], ['reciprocal_unit_cell'], ['inner_potential_V'], ['incident_wave_vector'],\n",
+      "                ['volume'], ['theta'], ['phi'], and ['incident_wave_vector_vacuum']\n",
+      "    \n",
+      "    kinematic_scattering2(atoms, verbose=False)\n",
+      "        All kinematic scattering calculation\n",
+      "        \n",
+      "        Calculates Bragg spots, Kikuchi lines, excess, and deficient HOLZ lines\n",
+      "        \n",
+      "        Parameters\n",
+      "        ----------\n",
+      "        atoms: ase.Atoms\n",
+      "            object with crystal structure:\n",
+      "            and with experimental parameters in info attribute:\n",
+      "            'acceleration_voltage_V', 'zone_hkl', 'Sg_max', 'hkl_max'\n",
+      "            Optional parameters are:\n",
+      "            'mistilt', convergence_angle_mrad', and 'crystal_name'\n",
+      "            verbose = True will give extended output of the calculation\n",
+      "        verbose: boolean\n",
+      "            default is False\n",
+      "        \n",
+      "        Returns\n",
+      "        -------\n",
       "        ato,s:\n",
       "            There are three sub_dictionaries in info attribute:\n",
       "            ['allowed'], ['forbidden'], and ['HOLZ']\n",
@@ -501,7 +533,7 @@
       "                ['Sg'], ['hkl'], ['g'], ['structure factor'], ['intensities'],\n",
       "                ['ZOLZ'], ['FOLZ'], ['SOLZ'], ['HOLZ'], ['HHOLZ'], ['label'], and ['Laue_zone']\n",
       "            the ['HOLZ'] dictionary contains:\n",
-      "                ['slope'], ['distance'], ['theta'], ['g deficient'], ['g excess'], ['hkl'], ['intensities'],\n",
+      "                ['slope'], ['distance'], ['theta'], ['g_deficient'], ['g_excess'], ['hkl'], ['intensities'],\n",
       "                ['ZOLZ'], ['FOLZ'], ['SOLZ'], ['HOLZ'], and  ['HHOLZ']\n",
       "            Please note that the Kikuchi lines are the HOLZ lines of ZOLZ\n",
       "        \n",
@@ -533,9 +565,7 @@
       "        ----------\n",
       "        atoms: Crystal\n",
       "            crystal structure\n",
-      "        tags: dict\n",
-      "            dictionary of experimental conditions\n",
-      "        verbose: verbose print outs\n",
+      "        verbose: verbose print-outs\n",
       "            set to False\n",
       "        Returns\n",
       "        -------\n",
@@ -581,7 +611,7 @@
       "    optional_inputKeys = ['crystal', 'lattice_parameter_nm', 'convergence_...\n",
       "\n",
       "FILE\n",
-      "    /home/nyd/.local/lib/python3.8/site-packages/pyTEMlib/kinematic_scattering.py\n",
+      "    c:\\users\\gduscher\\anaconda3\\envs\\tem\\lib\\site-packages\\pytemlib\\kinematic_scattering.py\n",
       "\n",
       "\n"
      ]
@@ -611,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
