--- a/Introduction/CH1_01-Introduction_Python.ipynb
+++ b/Introduction/CH1_01-Introduction_Python.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Fall 2022\n",
+    "by Gerd Duscher, Spring 2023\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -316,13 +316,13 @@
     "\n",
     "For a more modern programming approach they could also be grouped in classes, but classes  put another layer between the notebook and code, which is desirable for abstraction but not necessarily for understanding.\n",
     "\n",
-    "So for the course of this course the functions will be made available in libraries, which can be wrapped in classes for a more monolithic program.\n",
+    "So, within this course the functions will be made available in libraries, which can be wrapped in classes for a more monolithic program.\n",
     "\n",
-    "A graphical user interface (GUI) was consciously omitted in this course to encourage the user to mess around in the code.\n",
-    "So please change the vectors and see how the angle will change.\n",
+    "A graphical user interface (GUI) was consciously omitted in this course to encourage the user to interact withthe code.\n",
+    "Start now and change the vectors and see how the angle will change.\n",
     "\n",
     "## A word of caution:\n",
-    "A notebook can become confusing, if one does not go through it in a sequential way, because the values of parameters can be changed at any stage in any code cell without the other cells having any knowledge about that.\n",
+    "A notebook can become confusing, if one does not go through it in sequential order, because the values of parameters can be changed at any stage in any code cell without the other cells having any knowledge about that.\n",
     "\n",
     "A program or function will not have that kind of confusing tendency, and therefore, once we understand a topic,  a comprehensive function will be provided, like in the case of the angle function.\n",
     "If in doubt, let the notebook run all the way through.\n"
@@ -362,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": "2",
