--- a/_MSE672_Intro_TEM.ipynb
+++ b/_MSE672_Intro_TEM.ipynb
@@ -7,11 +7,13 @@
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](_MSE672_Intro_TEM.ipynb)**</font>\n",
     "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
     "\n",
-    "by Gerd Duscher\n",
+    "by Gerd Duscher, Spring 2023\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
+    "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
+    "\n",
     "\n",
     "\n",
     "# Foreword (ReadME)\n",
@@ -234,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
