--- a/Introduction/CH1_00-Introduction.ipynb
+++ b/Introduction/CH1_00-Introduction.ipynb
@@ -18,7 +18,7 @@
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
     "\n",
-    "by Gerd Duscher, Spring 2022\n",
+    "by Gerd Duscher, Spring 2023\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -36,7 +36,7 @@
     "\n",
     "This notebook-book, -course, -series, or whatever you want ot call it is a collection fo jupyter notebooks to analyse the various data which can be acquired with a transmission electron microscope (TEM).\n",
     "\n",
-    "First, **you do not need to program anything**, however, you will have to change the values of input parameters in the code cells. Of course, you are encouraged to modify the code in order to explore the data analysis methods, what can go wrong?\n",
+    "First, **you do not need to program anything**, however, you will have to change the values of input parameters in the code cells. Of course, you are encouraged to modify the code in order to explore the data analysis methods. What can go wrong?\n",
     "\n",
     "The advantage of jupyter notebooks is that it is a combination of a usual textbook and data-analysis software. The intent of the book is not to make a cool graphic user interface with a fast data analysis but to make it obvious what numerical and physical means are used to extract quantitative values from these data.\n",
     "\n",
@@ -91,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": "1",
