--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2022\n",
+    "by Gerd Duscher, Spring 2023\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -104,15 +104,46 @@
     "\n",
     "Once you have installed anaconda\n",
     "- open the anaconda PowerShell prompt and type:\n",
-    ">conda install -c conda-forge ase\n",
+    ">conda install -c conda-forge pytemlib\n",
     "\n",
-    "You are set to go on from here to open jupyter notebook server.\n",
+    "- or type \n",
+    ">pip install pyTEMlib\n",
     "\n",
-    "Optionally, you can install two other packages that were introduced above:\n",
-    "- type in the PowerShell:\n",
-    "> conda install -c simpleitk simpleitk\n",
-    ">\n",
-    "> conda install -c conda-forge spglib"
+    "Alternatively you can just run the code cell below. Be aware that the installation process may take a while."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "installing pyTEMlib\n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "from pkg_resources import get_distribution, DistributionNotFound\n",
+    "\n",
+    "def test_package(package_name):\n",
+    "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
+    "    try:\n",
+    "        version = (get_distribution(package_name).version)\n",
+    "    except (DistributionNotFound, ImportError) as err:\n",
+    "        version = '-1'\n",
+    "    return version\n",
+    "\n",
+    "# pyTEMlib setup ------------------\n",
+    "if test_package('pyTEMlib') < '0.2023.1.0':\n",
+    "    print('installing pyTEMlib')\n",
+    "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "# ------------------------------\n",
+    "print('done')"
    ]
   },
   {
@@ -134,27 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import matplotlib and numpy with this **magic** command\n",
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
     "#                       use \"widget\" instead of \"notebook\" for jupyter lab\n",
-    "%pylab notebook\n",
-    "%gui qt\n"
+    "%matplotlib notebook\n",
+    "%gui qt\n",
+    "import matplotlib.pylab as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -171,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -183,28 +208,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "blas_mkl_info:\n",
-      "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
-      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
+      "blas_info:\n",
+      "    libraries = ['cblas', 'blas', 'cblas', 'blas', 'cblas', 'blas']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\lib']\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\include']\n",
+      "    language = f77\n",
+      "    define_macros = [('HAVE_CBLAS', None)]\n",
       "blas_opt_info:\n",
-      "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
-      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
-      "lapack_mkl_info:\n",
-      "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
-      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
+      "    define_macros = [('NO_ATLAS_INFO', 1), ('HAVE_CBLAS', None)]\n",
+      "    libraries = ['cblas', 'blas', 'cblas', 'blas', 'cblas', 'blas']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\lib']\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\include']\n",
+      "    language = f77\n",
+      "lapack_info:\n",
+      "    libraries = ['lapack', 'blas', 'lapack', 'blas']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\lib']\n",
+      "    language = f77\n",
       "lapack_opt_info:\n",
-      "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
-      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
-      "numpy version:  1.20.3\n",
-      "scipy version:  1.7.1\n"
+      "    libraries = ['lapack', 'blas', 'lapack', 'blas', 'cblas', 'blas', 'cblas', 'blas', 'cblas', 'blas']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\lib']\n",
+      "    language = f77\n",
+      "    define_macros = [('NO_ATLAS_INFO', 1), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\include']\n",
+      "Supported SIMD extensions in this NumPy install:\n",
+      "    baseline = SSE,SSE2,SSE3\n",
+      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2,AVX512F,AVX512CD,AVX512_SKX,AVX512_CLX,AVX512_CNL,AVX512_ICL\n",
+      "    not found = \n",
+      "numpy version:  1.24.1\n",
+      "scipy version:  1.10.0\n"
      ]
     }
    ],
@@ -230,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -260,7 +291,7 @@
     "    return version\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') < '0.2022.1.1':\n",
+    "if test_package('pyTEMlib') <= '0.2023.1.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
@@ -280,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -291,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pyTEM version: 0.2022.1.0\n"
+      "pyTEM version: 0.2023.1.0\n"
      ]
     }
    ],
@@ -310,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -322,19 +353,18 @@
      "output_type": "stream",
      "text": [
       "Symmetry functions of spglib enabled\n",
-      "Using kinematic_scattering library version  0.6  by G.Duscher\n"
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "module 'pyTEMlib.kinematic_scattering' has no attribute 'structure_by_name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1444/848636944.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# make a structure dictionary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0matoms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstructure_by_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Graphite'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0matoms\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'pyTEMlib.kinematic_scattering' has no attribute 'structure_by_name'"
-     ]
+     "data": {
+      "text/plain": [
+       "Atoms(symbols='C4', pbc=False, cell=[[2.46772414, 0.0, 0.0], [-1.2338620699999996, 2.1371117947721068, 0.0], [0.0, 0.0, 6.711]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -348,9 +378,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Popen: returncode: None args: ['C:\\\\Users\\\\gduscher\\\\Anaconda3\\\\envs\\\\tem\\\\...>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ase.visualize import view\n",
     "view(atoms*(4,4,1))"
@@ -580,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": "3",
