--- a/Introduction/CH1_05-Course_Organization.ipynb
+++ b/Introduction/CH1_05-Course_Organization.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Fall 2022\n",
+    "by Gerd Duscher, Spring 2023\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -106,22 +106,21 @@
     "\n",
     "| Week | Lecture | Chp. | Lab |\n",
     "|------|---------|------|-----|\n",
-    "|01/24 - 01/30| 1:Introduction | 1 | |\n",
-    "|01/24 - 01/30| 2,3:Geometric Ray Optics | 6 ||\n",
-    "|01/31 - 02/06| 4,5:Kinematic Diffraction |  2,11 | Lab1: Basic Imaging|\n",
-    "|02/07 - 02/13 | 6,7:Kinematic Diffraction -parallel | 12  | Lab2: Basic Diffraction|\n",
-    "|02/14 - 02/20 | 8,9:Kinematic Diffraction -convergent   | 19,20 | Lab3: SAED |\n",
-    "|02/21 - 02/27 | 10,11:Dynamic Diffraction | 14,15 | Lab4: CBED |\n",
-    "|02/28 - 03/06 | 12:Imaging Overview | 22 | Lab5: Two Beams|\n",
-    "|03/07 - 03/13 | 13,14:Imaging Conventional | 24-27 | Lab7: Phase Contrast|\n",
-    "|03/21 - 03/27 | 15,16:Imaging Phase Contrast | 28,30 | Lab6: Exam Preparation|\n",
-    "|03/28 - 04/03 | 17,18:Imaging and Lens Aberrations | 31 | Exam |\n",
-    "|04/04 - 04/10  | 19,20:Imaging Z-contrast| -  | Lab8: CTF|\n",
-    "|04/11 - 04/17 | 21,22:Spectroscopy EELS | 36-40 | Lab9: Z-contrast|\n",
-    "|04/18 - 04/24  | 23,24:Spectroscopy EDS | 33-35 | Lab10: EELS, ESI|\n",
-    "|04/25 - 05/01  | 25:Other Techniques | 29 ||\n",
-    "|05/02 - 05/08 | 26,27: TEM parts and vacuum | 5-9 ||\n",
-    "|05/10 | 28:Project discussion ||"
+    "|01/23 - 01/29| 1,2:Introduction, Geometric Ray Optics | 1 | |\n",
+    "|01/29 - 02/05| 3,4: Kinematic Diffraction |  2,11 | Lab1: Basic Imaging|\n",
+    "|02/06 - 02/12 | 5,6:Kinematic Diffraction -parallel | 12  | Lab2: Basic Diffraction|\n",
+    "|02/13 - 02/19 | 7,8:Kinematic Diffraction -convergent   | 19,20 | Lab3: SAED |\n",
+    "|02/20 - 02/26 | 9,10:Dynamic Diffraction | 14,15 | Lab4: CBED |\n",
+    "|02/27 - 03/05 | 11,12:Imaging Overview | 22 | Lab5: Two Beams|\n",
+    "|03/06 - 03/12 | 13,14:Imaging Conventional | 24-27 | Lab7: Phase Contrast|\n",
+    "|03/20 - 03/26 | 15,16:Imaging Phase Contrast | 28,30 | Lab6: Exam Preparation|\n",
+    "|03/27 - 04/02 | 17,18:Imaging and Lens Aberrations | 31 | Exam |\n",
+    "|04/03 - 04/09  | 19 :Imaging Z-contrast| -  | Lab8: CTF|\n",
+    "|04/10 - 04/16 | 20,21:Spectroscopy EELS | 36-40 | Lab9: Z-contrast|\n",
+    "|04/17 - 04/23  | 22,23:Spectroscopy EDS | 33-35 | Lab10: EELS, ESI|\n",
+    "|04/24 - 04/30  | 24:Other Techniques | 29 ||\n",
+    "|05/01 - 05/07 | 25,26: TEM parts and vacuum | 5-9 ||\n",
+    "|05/09 | 28:Project discussion ||"
    ]
   },
   {
@@ -206,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": "5",
