Update for new semester

--- a/Spectroscopy/CH4_00-Spectroscopy.ipynb
+++ b/Spectroscopy/CH4_00-Spectroscopy.ipynb
@@ -51,7 +51,8 @@
     "* [Bremsstrahlung](CH4_13-Bremsstrahlung.ipynb)\n",
     "* [Characteristic X-Rays](CH4_14-Characteristic_X_Rays.ipynb)\n",
     "* [Detector Response](CH4_15-Detector.ipynb)\n",
-    "* [Analyze Spectrum](CH4_16-Analyze_Spectrum.ipynb)\n"
+    "* [Analyze Spectrum](CH4_16-Analyze_Spectrum.ipynb)\n",
+    "* [Quantify Spectrum](CH4_17-Quantify_Spectrum)\n"
    ]
   },
   {
