--- a/Spectroscopy/CH4_00-Spectroscopy.ipynb
+++ b/Spectroscopy/CH4_00-Spectroscopy.ipynb
@@ -15,14 +15,15 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2023\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes.\n",
+    "\n",
     "\n",
     "The Spectroscopy chapter has the following sections:\n",
     "\n",
@@ -43,7 +44,15 @@
     "* [Analysing Core-Loss Spectra](CH4_09-Analyse_Core_Loss.ipynb)\n",
     "* [Electron Energy-Loss Near-Edge Structure](CH4_10-ELNES.ipynb)\n",
     "\n",
-    "## Electron Dispersive Spectrosocpy\n"
+    "## Energy Dispersive X-Ray Spectroscopy\n",
+    "\n",
+    "    \n",
+    "* [Introduction to X-Ray](CH4_12-Introduction_X_Rays.ipynb)\n",
+    "* [Bremsstrahlung](CH4_13-Bremsstrahlung.ipynb)\n",
+    "* [Characteristic X-Rays](CH4_14-Characteristic_X_Rays.ipynb)\n",
+    "* [Detector Response](CH4_15-Detector.ipynb)\n",
+    "* [Analyze Spectrum](CH4_16-Analyze_Spectrum.ipynb)\n",
+    "* [Quantify Spectrum](CH4_17-Quantify_Spectrum)\n"
    ]
   },
   {
@@ -79,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
