--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,22 +159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6256118898444742\n",
-      "Classic wave length is 3.88 pm for acceleration voltage 100.0 kV\n",
-      " which is a velocity of 187553726.21 m/s or 62.56% of the speed of light\n"
+      "1.0835915790298132\n",
+      "Classic wave length is 2.24 pm for acceleration voltage 300.0 kV\n",
+      " which is a velocity of 324852582.95 m/s or 108.36% of the speed of light\n"
      ]
     }
    ],
    "source": [
     "## input \n",
-    "acceleration_voltage_V = U = 100.0 * 1000.0 #V   \n",
+    "acceleration_voltage_V = U = 300.0 * 1000.0 #V   \n",
     "\n",
     "## energy\n",
     "E_kin = eU = const.e * acceleration_voltage_V  # potential\n",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
    "source": [
     "100kV : $\\lambda$ = 4 pm $<$ than diameter of an atom\n",
     "\n",
-    "The reltivistic parameters are:\n",
+    "The relativistic parameters are:\n",
     "\n",
     "\n",
     "|E (keV)|$\\lambda$ (pm) | M/m$_0$ | v/c|\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
       "    optional_inputKeys = ['crystal', 'lattice_parameter_nm', 'convergence_...\n",
       "\n",
       "FILE\n",
-      "    c:\\users\\gduscher\\anaconda3\\envs\\tem\\lib\\site-packages\\pytemlib\\kinematic_scattering.py\n",
+      "    c:\\users\\gduscher\\anaconda3\\lib\\site-packages\\pytemlib\\kinematic_scattering.py\n",
       "\n",
       "\n"
      ]
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
