--- a/Diffraction/CH2_02-Atomic_Form_Factor.ipynb
+++ b/Diffraction/CH2_02-Atomic_Form_Factor.ipynb
@@ -2218,10 +2218,9 @@
     "\n",
     "The scattering power is dependent on the so-called atomic form factor $f_e$ ( the subscript $_e$ means this is for electrons).\n",
     "\n",
-    "99\n",
-    "Since an electron scatters through the coulomb force of the (screend) nucleus, the form factor is the inner potential.\n",
-    "We can 9\n",
-    "\n"
+    "All form factors (X-ray, electrons, ions, neutrons, ...) are based on a Fourier transform of a density distribution of the scattering object from real space to momentum (or reciprocal) space.\n",
+    "\n",
+    "Since an electron scatters through the coulomb force of the (screend) nucleus, the form factor is the inner potential."
    ]
   },
   {
@@ -2238,7 +2237,9 @@
     "\tscattered from an isolated atom.\n",
     "- $|f(\\theta)|^2$ is proportional to the scattered intensity.\n",
     "- The atomic scattering factor depends on atomic number $Z$, wavelength $\\lambda$ and scattering angle $\\theta$.  \n",
-    "- The atomic structure factors for each element are tabulated.\n"
+    "- The atomic structure factors for each element are tabulated.\n",
+    "\n",
+    "The atomic form factor gives us the probability of an electron scattering in a certain angle."
    ]
   },
   {
@@ -3327,7 +3328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.16"
   },
   "livereveal": {
    "height": 768,
