--- a/Introduction/CH1_01-Introduction_Python.ipynb
+++ b/Introduction/CH1_01-Introduction_Python.ipynb
@@ -53,20 +53,22 @@
     "\n",
     "which is calculated by the dot product: $\\vec{a} \\cdot \\vec{b} = \\left| \\vec{a} \\right| \\left| \\vec{b} \\right| \\cos (\\theta) $\n",
     "\n",
+    " $ \\arccos \\left( \\frac{\\vec{a} \\cdot \\vec{b}} {\\left| \\vec{a} \\right| \\left| \\vec{b} \\right|} \\right) = \\theta $\n",
+    "\n",
     "The dot product is really the projection of one vector onto the other one:\n",
     "<img src=\"images/dot_product.jpg\" alt=\"dot_product\" width=\"200px\"/>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The angle between vectors a and b is 49.80°\n"
+      "The angle between vectors a and b is 39.63°\n"
      ]
     }
    ],
@@ -76,12 +78,13 @@
     "\n",
     "# We define the two vectors\n",
     "\n",
-    "a_vector = [1,1,2]\n",
-    "b_vector = [0,3,1]\n",
+    "a_vector = [1, 1, 2]\n",
+    "b_vector = [0, 5, 3]\n",
     "\n",
     "# calculate the lengths of the vectors\n",
     "a_length = np.linalg.norm(a_vector)\n",
     "b_length = np.linalg.norm(b_vector)\n",
+    "\n",
     "\n",
     "#now the angle between vectors a and b according to above formula\n",
     "theta = np.arccos(np.dot(a_vector, b_vector) / (a_length * b_length) )\n",
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -142,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The angle between vectors a and b is 49.80°\n"
+      "The angle between vectors a and b is 28.67°\n"
      ]
     }
    ],
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -200,7 +203,7 @@
       "    -------\n",
       "        angle: angle between the vectors in radians\n",
       "\n",
-      "The angle between vectors a: [1, 1, 2] and b: [0, 3, 1] is 49.80°\n"
+      "The angle between vectors a: [1, 1, 2] and b: [0, 5, 5.44] is 28.67°\n"
      ]
     }
    ],
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +267,7 @@
      "output_type": "stream",
      "text": [
       "angles of vector field to first vector\n",
-      "[ 0.    49.797 40.203]\n"
+      "[ 0.    28.668 40.203]\n"
      ]
     }
    ],
@@ -362,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": "2",
