--- a/Diffraction/CH2_03-Basic_Crystallography.ipynb
+++ b/Diffraction/CH2_03-Basic_Crystallography.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -102,6 +102,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Symmetry functions of spglib enabled\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "pyTEM version:  0.2023.1.0\n"
      ]
     }
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +232,7 @@
        "Atoms(symbols='C4', pbc=False, cell=[[2.46, 0.0, 0.0], [-1.2299999999999995, 2.130422493309719, 0.0], [0.0, 0.0, 6.71]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +301,7 @@
        "       [3.04714108e-16, 1.42474120e+00, 3.35550000e+00]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1429,7 @@
     {
      "data": {
       "text/plain": [
-       "<Popen: returncode: None args: ['C:\\\\Users\\\\gduscher\\\\Anaconda3\\\\envs\\\\tem\\\\...>"
+       "<Popen: returncode: None args: ['C:\\\\Users\\\\gduscher\\\\Anaconda3\\\\python.exe'...>"
       ]
      },
      "execution_count": 13,
@@ -2513,7 +2515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": "3",
