--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -176,7 +176,7 @@
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
     "#                       use \"widget\" instead of \"notebook\" for jupyter lab\n",
     "%matplotlib notebook\n",
-    "%gui qt\n",
+    "\n",
     "import matplotlib.pylab as plt\n",
     "import numpy as np"
    ]
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -207,34 +207,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "blas_info:\n",
-      "    libraries = ['cblas', 'blas', 'cblas', 'blas', 'cblas', 'blas']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\lib']\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\include']\n",
-      "    language = f77\n",
-      "    define_macros = [('HAVE_CBLAS', None)]\n",
+      "blas_armpl_info:\n",
+      "  NOT AVAILABLE\n",
+      "blas_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
       "blas_opt_info:\n",
-      "    define_macros = [('NO_ATLAS_INFO', 1), ('HAVE_CBLAS', None)]\n",
-      "    libraries = ['cblas', 'blas', 'cblas', 'blas', 'cblas', 'blas']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\lib']\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\include']\n",
-      "    language = f77\n",
-      "lapack_info:\n",
-      "    libraries = ['lapack', 'blas', 'lapack', 'blas']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\lib']\n",
-      "    language = f77\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
+      "lapack_armpl_info:\n",
+      "  NOT AVAILABLE\n",
+      "lapack_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
       "lapack_opt_info:\n",
-      "    libraries = ['lapack', 'blas', 'lapack', 'blas', 'cblas', 'blas', 'cblas', 'blas', 'cblas', 'blas']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\lib']\n",
-      "    language = f77\n",
-      "    define_macros = [('NO_ATLAS_INFO', 1), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3/envs/tem\\\\Library\\\\include']\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
       "Supported SIMD extensions in this NumPy install:\n",
       "    baseline = SSE,SSE2,SSE3\n",
-      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2,AVX512F,AVX512CD,AVX512_SKX,AVX512_CLX,AVX512_CNL,AVX512_ICL\n",
+      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2,AVX512F,AVX512CD,AVX512_SKX,AVX512_CLX,AVX512_CNL\n",
       "    not found = \n",
-      "numpy version:  1.24.1\n",
-      "scipy version:  1.10.0\n"
+      "numpy version:  1.23.5\n",
+      "scipy version:  1.9.3\n"
      ]
     }
    ],
@@ -260,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -310,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -361,7 +363,7 @@
        "Atoms(symbols='C4', pbc=False, cell=[[2.46772414, 0.0, 0.0], [-1.2338620699999996, 2.1371117947721068, 0.0], [0.0, 0.0, 6.711]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,16 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Popen: returncode: None args: ['C:\\\\Users\\\\gduscher\\\\Anaconda3\\\\envs\\\\tem\\\\...>"
+       "<Popen: returncode: None args: ['C:\\\\Users\\\\gduscher\\\\Anaconda3\\\\python.exe'...>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": "3",
