--- a/Spectroscopy/CH4_08-Chemical_Composition.ipynb
+++ b/Spectroscopy/CH4_08-Chemical_Composition.ipynb
@@ -103,15 +103,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "%pylab is deprecated, use %matplotlib inline and import the required libraries.\n",
-      "Populating the interactive namespace from numpy and matplotlib\n",
       "Symmetry functions of spglib enabled\n",
-      "pyTEM version:  0.2022.9.0\n"
+      "pyTEM version:  0.2023.1.0\n"
      ]
     }
    ],
    "source": [
-    "%pylab --no-import-all notebook\n",
+    "%matplotlib  notebook\n",
+    "import matplotlib.pylab as plt\n",
+    "import numpy as np\n",
     "%gui qt\n",
     "    \n",
     "import warnings\n",
@@ -6831,7 +6831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
