--- a/Spectroscopy/CH4_08-Chemical_Composition.ipynb
+++ b/Spectroscopy/CH4_08-Chemical_Composition.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2022\n",
+    "by Gerd Duscher, Spring 2023\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -53,14 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "installing pyTEMlib\n",
       "done\n"
      ]
     }
@@ -77,7 +76,7 @@
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "if test_package('pyTEMlib') < '0.2022.9.0':\n",
+    "if test_package('pyTEMlib') < '0.2023.2.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "print('done')"
@@ -316,9 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4443,9 +4440,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -5537,9 +5532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "energy_scale = main_dataset.energy_loss*1.03-3\n",
@@ -5604,9 +5597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure()\n",
@@ -6817,9 +6808,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "tem",
    "language": "python",
-   "name": "python3"
+   "name": "tem"
   },
   "language_info": {
    "codemirror_mode": {
@@ -6831,7 +6822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
@@ -6882,5 +6873,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
