--- a/Homework/Homework06-TwoBeam.ipynb
+++ b/Homework/Homework06-TwoBeam.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "\n",
-    "<font size = \"5\"> **Chapter 2: [Diffraction](CH2_00-Diffraction.ipynb)** </font>\n",
+    "<font size = \"5\"> **Chapter 2: [Diffraction](../Diffraction/CH2_00-Diffraction.ipynb)** </font>\n",
     "\n",
     "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
     "\n",
@@ -41,17 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "from pkg_resources import get_distribution, DistributionNotFound\n",
