--- a/Imaging/CH3_09-Z_Contrast.ipynb
+++ b/Imaging/CH3_09-Z_Contrast.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "hideCode": false,
@@ -21,6 +20,8 @@
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM/main/Imaging/CH3_09-Z_Contrast.ipynb)\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Imaging/CH3_09-Z-contrast.ipynb)\n",
     "\n",
     "part of \n",
     "\n",
@@ -39,7 +40,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "hideCode": false,
@@ -82,10 +82,11 @@
     "if 'google.colab' in sys.modules:\n",
     "    !pip install pyTEMlib -q\n",
     "    !pip install ase\n",
+    "    !pip install ipympl -q\n",
     "    !pip install abtem -q\n",
     "# pyTEMlib setup ------------------\n",
     "else:\n",
-    "    if test_package('pyTEMlib') < '0.2021.3.25':\n",
+    "    if test_package('pyTEMlib') < '0.2023.3.0':\n",
     "        print('installing pyTEMlib')\n",
     "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "    if test_package('abtem') < '1.0.0b17':\n",
@@ -127,11 +128,16 @@
     "# import matplotlib and numpy\n",
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
     "import sys\n",
+    "import sys\n",
     "if 'google.colab' in sys.modules:\n",
-    "    %pylab --no-import-all inline\n",
+    "    %matplotlib ipympl\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()\n",
     "else:    \n",
-    "    %pylab --no-import-all notebook\n",
+    "    %matplotlib notebook\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "# import atomic simulation environment\n",
     "import ase\n",
@@ -447,7 +453,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -684,7 +689,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -702,7 +706,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -752,7 +755,7 @@
  "metadata": {
   "hide_code_all_hidden": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -766,7 +769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.15"
   },
   "toc": {
    "base_numbering": "9",
