--- a/Imaging/CH3_06-Image_Processing.ipynb
+++ b/Imaging/CH3_06-Image_Processing.ipynb
@@ -8285,9 +8285,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ase",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ase"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8299,7 +8299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.10"
   },
   "toc": {
    "base_numbering": "6",
