--- a/Imaging/CH3_09-Z_Contrast.ipynb
+++ b/Imaging/CH3_09-Z_Contrast.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "hideCode": false,
@@ -20,8 +21,9 @@
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM/main/Imaging/CH3_09-Z_Contrast.ipynb)\n",
     "\n",
+    "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Imaging/CH3_09-Z-contrast.ipynb)\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Imaging/CH3_09-Z_Contrast.ipynb)\n",
     "\n",
     "part of \n",
     "\n",
@@ -81,7 +83,7 @@
     "# Colab setup ------------------\n",
     "if 'google.colab' in sys.modules:\n",
     "    !pip install pyTEMlib -q\n",
-    "    !pip install ase\n",
+    "    !pip install ase -q\n",
     "    !pip install ipympl -q\n",
     "    !pip install abtem -q\n",
     "# pyTEMlib setup ------------------\n",
@@ -97,19 +99,26 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Load Packages\n",
     "We will use \n",
-    "- numpy and matplotlib (installed with magic comand **%pylab**.)\n",
+    "- numpy and matplotlib\n",
     "- physical constants from scipy\n",
-    "- The pyTEMlib kinematic scattering librarty is only used to determine the wavelength."
+    "- The pyTEMlib kinematic scattering librarty is only used to determine the wavelength.\n",
+    "\n",
+    "abTEM\n",
+    "\n",
+    "please cite abTEM methods article:\n",
+    "\n",
+    "[J. Madsen & T. Susi, \"The abTEM code: transmission electron microscopy from first principles\", Open Research Europe 1: 24 (2021)](https://doi.org/10.12688/openreseurope.13015.1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
@@ -117,10 +126,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'abtem'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mase\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mvisualize\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[39m# import abintio-tem library\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mabtem\u001b[39;00m\n\u001b[0;32m     20\u001b[0m __notebook__ \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mCH3_09-Z_Contrast\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     21\u001b[0m __notebook_version__ \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m2021_03_29\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'abtem'"
      ]
     }
    ],
@@ -128,13 +141,10 @@
     "# import matplotlib and numpy\n",
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
     "import sys\n",
-    "import sys\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    %matplotlib ipympl\n",
+    "%matplotlib ipympl\n",
+    "if 'google.colab' in sys.modules:    \n",
     "    from google.colab import output\n",
     "    output.enable_custom_widget_manager()\n",
-    "else:    \n",
-    "    %matplotlib notebook\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -269,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,10 +287,11 @@
     "convergence_angle = 20  # in mrad of half angle\n",
     "acceleration_voltage = 80e3 # in V\n",
     "defocus = 40  # in nm\n",
+    "Cs = .5 # in mm            conversion to ase and Angstrom    *1-6 * 1e10 = 1e4\n",
     "# -----------------#\n",
     "\n",
     "probe = abtem.Probe(energy=acceleration_voltage, semiangle_cutoff=convergence_angle, \n",
-    "                    rolloff=0.1, defocus=defocus, Cs=3e5, focal_spread=20)\n",
+    "                    rolloff=0.1, defocus=defocus, Cs=C_s*1e4, focal_spread=20)\n",
     "probe.grid.match(tds_potential)"
    ]
   },
@@ -299,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -466,10 +477,47 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Scanning the Probe\n",
+    "### Get data directory\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m data_directory \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m./\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[39m# if not in google.colab this will throw and error\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgoogle\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcolab\u001b[39;00m \u001b[39mimport\u001b[39;00m drive\n\u001b[0;32m      5\u001b[0m drive\u001b[39m.\u001b[39mmount(\u001b[39m'\u001b[39m\u001b[39m/content/drive\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m get_ipython()\u001b[39m.\u001b[39msystem(\u001b[39m\"\u001b[39m\u001b[39mmkdir \u001b[39m\u001b[39m'\u001b[39m\u001b[39m/content/drive/My Drive/abtem\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'google'"
+     ]
+    }
+   ],
+   "source": [
+    "data_directory = './'\n",
+    "\n",
+    "# if not in google.colab this will throw and error\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "!mkdir '/content/drive/My Drive/abtem'\n",
+    "data_directory = '/content/drive/My Drive/abtem/'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "### Define scanning area"
    ]
@@ -503,8 +551,8 @@
     }
    ],
    "source": [
-    "haadf_detector = abtem.AnnularDetector(inner=90, outer=190, save_file='data/gridscan_haadf.hdf5')\n",
-    "bf_detector  = abtem.AnnularDetector(inner=0, outer=20, save_file='data/gridscan_bf.hdf5')\n",
+    "haadf_detector = abtem.AnnularDetector(inner=90, outer=190, save_file=data_directory+'gridscan_haadf.hdf5')\n",
+    "bf_detector  = abtem.AnnularDetector(inner=0, outer=20, save_file=data_directory+'gridscan_bf.hdf5')\n",
     "\n",
     "gridscan = abtem.GridScan(start=[0, 0], end=[3.906, 3.906], sampling=probe.ctf.nyquist_sampling * .9)\n",
     "\n",
@@ -769,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.10"
   },
   "toc": {
    "base_numbering": "9",
