--- a/Introduction/CH1_04-Open_File.ipynb
+++ b/Introduction/CH1_04-Open_File.ipynb
@@ -162,8 +162,7 @@
    "execution_count": 2,
    "metadata": {
     "hideCode": false,
-    "hidePrompt": false,
-    "scrolled": false
+    "hidePrompt": false
    },
    "outputs": [
     {
@@ -195,9 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5715,9 +5712,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -8969,7 +8964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.2"
   },
   "toc": {
    "base_numbering": "5",
@@ -9015,5 +9010,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
