--- a/Homework/Homework01.ipynb
+++ b/Homework/Homework01.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,11 +15,15 @@
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Homework/Homework01.ipynb)\n",
     "\n",
+    "[![OpenInColab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Homework/Homework01.ipynb)\n",
+    "    \n",
+    "    \n",
     "part of \n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2022\n",
+    "by Gerd Duscher, Spring 2024\n",
     "<br>\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -88,6 +91,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Try to run this in colab and you rown computer."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -97,7 +107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ase",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
